--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Yutian</title>
-		<link rel="stylesheet" href="%sveltekit.assets%/style.css"/>
+		<!-- <link rel="stylesheet" href="%sveltekit.assets%/style.css"/> -->
 		<script src="%sveltekit.assets%/global.js" type="module"></script>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
