--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<script>
+			let root = document.documentElement;
+			let colorScheme = localStorage.colorScheme ?? "light dark";
+			root.style.setProperty("color-scheme", colorScheme);
+		</script>
+		  
 		<title>Yutian</title>
 		<!-- <link rel="stylesheet" href="%sveltekit.assets%/style.css"/> -->
 		<script src="%sveltekit.assets%/global.js" type="module"></script>
